--- a/i3/config
+++ b/i3/config
@@ -1,26 +1,42 @@
-# set mod as left Alt
+# Strtart up programs here:
+exec --no-startup-id nm-applet  # network manager applet
+exec --no-startup-id volumeicon  # sound control applet
+
+
+
+
+
+ 
+# Use alt as modifier key
 set $mod Mod1
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:Terminus 8
+font pango:monospace 8
 
+# This font is widely installed, provides lots of unicode glyphs, right-to-left
+# text rendering and scalability on retina/hidpi displays (thanks to pango).
+#font pango:DejaVu Sans Mono 8
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
+
+# bind functional keys in my laptop
+set $sink `pactl list short sinks | grep RUNNING | cut -f1`
+
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute $sink toogle
+
+bindsym XF86KdbBrightnessUp exec xbacklight -inc 20
+bindsym XF86KdbBrightnessDown exec xbacklight -dec 20
+
+
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
-
-# Start-up programs
-# exec -> On start-up
-# exec_always -> On start-up and reload
-exec_always --no-startup-id feh --bg-fill --randomize ~/Pictures/backgrounds/*
-
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
@@ -140,6 +156,4 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
-        tray_output primary
-        # output LVDS1
 }
