Vim keybindings update

--- a/dotfiles/.ideavimrc
+++ b/dotfiles/.ideavimrc
@@ -4,6 +4,7 @@ nmap f <Plug>(easymotion-bd-f2)
 
 set easymotion
 set commentary
+set ideajoin
 
 map <leader>r :action ReformatCode<CR>
 map <leader>ff :action GotoFile<CR>
